<resources>
    <string name="app_name">CodeAcademy</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_in">Sign In!</string>
    <string name="APP_PREFERENCES">DATA</string>
    <string name="APP_PREFERENCES_NAME">Authorization</string>
    <string name="TOKEN_BEARER">Bearer </string>

</resources>
